syntax = "proto3";

package order;

option go_package = "github.com/yourusername/order-service/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service OrderService {
  // Order Management
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetOrder(GetOrderRequest) returns (Order);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (Order);
  
  // Address Management
  rpc AddDeliveryAddress(DeliveryAddress) returns (DeliveryAddress);
  rpc UpdateDeliveryAddress(DeliveryAddress) returns (DeliveryAddress);
  rpc DeleteDeliveryAddress(DeleteAddressRequest) returns (google.protobuf.Empty);
  rpc ListDeliveryAddresses(ListAddressesRequest) returns (ListAddressesResponse);
  
  // Delivery Time Management
  rpc SetDeliveryTime(SetDeliveryTimeRequest) returns (Order);
  rpc GetAvailableDeliverySlots(GetDeliverySlotsRequest) returns (GetDeliverySlotsResponse);
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_price = 4;
  string currency = 5;
  OrderStatus status = 6;
  DeliveryAddress delivery_address = 7;
  google.protobuf.Timestamp delivery_time = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double unit_price = 4;
  double total_price = 5;
}

message DeliveryAddress {
  string id = 1;
  string user_id = 2;
  string full_name = 3;
  string street_address = 4;
  string apartment = 5;
  string city = 6;
  string state = 7;
  string postal_code = 8;
  string country = 9;
  string phone = 10;
  bool is_default = 11;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  string delivery_address_id = 3;
  google.protobuf.Timestamp delivery_time = 4;
}

message GetOrderRequest {
  string order_id = 1;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  OrderStatus status = 2;
}

message DeleteAddressRequest {
  string address_id = 1;
  string user_id = 2;
}

message ListAddressesRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListAddressesResponse {
  repeated DeliveryAddress addresses = 1;
  int32 total = 2;
}

message SetDeliveryTimeRequest {
  string order_id = 1;
  google.protobuf.Timestamp delivery_time = 2;
}

message GetDeliverySlotsRequest {
  google.protobuf.Timestamp date = 1;
}

message DeliverySlot {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
  bool available = 3;
}

message GetDeliverySlotsResponse {
  repeated DeliverySlot slots = 1;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_CREATED = 1;
  ORDER_STATUS_AWAITING_PAYMENT = 2;
  ORDER_STATUS_PAID = 3;
  ORDER_STATUS_PROCESSING = 4;
  ORDER_STATUS_READY_FOR_DELIVERY = 5;
  ORDER_STATUS_OUT_FOR_DELIVERY = 6;
  ORDER_STATUS_DELIVERED = 7;
  ORDER_STATUS_CANCELLED = 8;
} 