package handler

import (
	"context"

	"github.com/hsibAD/order-service/internal/domain"
	pb "github.com/hsibAD/order-service/proto"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

type OrderHandler struct {
	pb.UnimplementedOrderServiceServer
}

func RegisterServices(s *grpc.Server, cfg interface{}) {
	pb.RegisterOrderServiceServer(s, &OrderHandler{})
}

func (h *OrderHandler) CreateOrder(ctx context.Context, req *pb.CreateOrderRequest) (*pb.Order, error) {
	// TODO: Implement order creation logic
	return nil, status.Error(codes.Unimplemented, "method CreateOrder not implemented")
}

func (h *OrderHandler) GetOrder(ctx context.Context, req *pb.GetOrderRequest) (*pb.Order, error) {
	// TODO: Implement get order logic
	return nil, status.Error(codes.Unimplemented, "method GetOrder not implemented")
}

func (h *OrderHandler) UpdateOrderStatus(ctx context.Context, req *pb.UpdateOrderStatusRequest) (*pb.Order, error) {
	// TODO: Implement update order status logic
	return nil, status.Error(codes.Unimplemented, "method UpdateOrderStatus not implemented")
}

func (h *OrderHandler) AddDeliveryAddress(ctx context.Context, req *pb.DeliveryAddress) (*pb.DeliveryAddress, error) {
	// TODO: Implement add delivery address logic
	return nil, status.Error(codes.Unimplemented, "method AddDeliveryAddress not implemented")
}

func (h *OrderHandler) ListDeliveryAddresses(ctx context.Context, req *pb.ListAddressesRequest) (*pb.ListAddressesResponse, error) {
	// TODO: Implement list delivery addresses logic
	return nil, status.Error(codes.Unimplemented, "method ListDeliveryAddresses not implemented")
}

func (h *OrderHandler) GetAvailableDeliverySlots(ctx context.Context, req *pb.DeliverySlotsRequest) (*pb.DeliverySlotsResponse, error) {
	// TODO: Implement get available delivery slots logic
	return nil, status.Error(codes.Unimplemented, "method GetAvailableDeliverySlots not implemented")
} 